--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -2,7 +2,8 @@
 import TitleHeaderLayout from "./TitleHeaderLayout.astro";
 ---
 
-<div class="border border-indigo-600 rounded">
-    HeaderLayout
-    <TitleHeaderLayout />
+<div class="w-full m-0 p-0 bg-cover bg-bottom" style="background-image:url('cover.jpg'); height: 60vh; max-height:460px;">
+    <div class="container max-w-4xl mx-auto pt-16 md:pt-32 text-center break-normal">
+        <TitleHeaderLayout />
+    </div>
 </div>
