Заголовок шапки сайта

--- a/src/layouts/TitleHeaderLayout.astro
+++ b/src/layouts/TitleHeaderLayout.astro
@@ -1,1 +1,4 @@
-<div class="border border-green-600 rounded">TitleHeaderLayout</div>
+<p class="text-white font-extrabold text-3xl md:text-5xl">
+    👻 Ghostwind CSS
+</p>
+<p class="text-xl md:text-2xl text-gray-500">Welcome to my Blog</p>
