--- a/src/layouts/FooterLayout.astro
+++ b/src/layouts/FooterLayout.astro
@@ -1,1 +1,23 @@
-<div class="border border-red-400 rounded">FooterLayout</div>
+---
+import NavFooterLayout from "./NavFooterLayout.astro";
+---
+
+
+<footer class="bg-gray-900">
+	<div class="container max-w-6xl mx-auto flex items-center px-2 py-8">
+		<div class="w-full mx-auto flex flex-wrap items-center">
+			<div
+				class="flex w-full md:w-1/2 justify-center md:justify-start text-white font-extrabold"
+			>
+				<a
+					class="text-gray-900 no-underline hover:text-gray-900 hover:no-underline"
+					href="#"
+				>
+					👻 <span class="text-base text-gray-200">Ghostwind CSS</span
+					>
+				</a>
+			</div>
+			<NavFooterLayout />
+		</div>
+	</div>
+</footer>
