--- a/src/layouts/ContainerLayout.astro
+++ b/src/layouts/ContainerLayout.astro
@@ -4,10 +4,13 @@ import SubscribeContainerLayout from "./SubscribeContainerLayout.astro";
 import AuthorContainerLayout from "./AuthorContainerLayout.astro";
 ---
 
-<div class="border border-yellow-900 rounded">
-    ContainerLayout
-    <NavContainerLayout />
-    <slot />
-    <SubscribeContainerLayout />
-    <AuthorContainerLayout />
+<div class="container px-4 md:px-0 max-w-6xl mx-auto -mt-32">
+    <div class="mx-0 sm:mx-6">
+        <NavContainerLayout />
+        <div class="bg-gray-200 w-full text-xl md:text-2xl text-gray-800 leading-normal rounded-t">
+            <slot />
+        </div>
+        <SubscribeContainerLayout />
+        <AuthorContainerLayout />
+    </div>
 </div>
