--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,26 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import LeadCard from "../components/LeadCard.astro";
+import Card from "../components/Card.astro";
 import { IProduct } from "../types";
 
 // Получаем данные с сайта
-const response = await fetch('http://fakestoreapi.com/products?limit=8');
+const response = await fetch("http://fakestoreapi.com/products?limit=8");
 // Переделываем данные в список JSON-объектов
-const products = await response.json() as IProduct[];
+const products = (await response.json()) as IProduct[];
 // Отделяем первый продукт для первой карточки
 const firstProduct = products.shift();
+
+// Список ширин карточек, в том порядке, в котором они будут показываться
+const widthClassesOfCards: string[] = [
+	"w-1/3",
+	"w-1/3",
+	"w-1/3",
+	"w-1/2",
+	"w-1/2",
+	"w-2/3",
+	"w-1/3",
+];
 ---
 
 <Layout
@@ -17,12 +29,26 @@ const firstProduct = products.shift();
 	keywords="разные, ключевые, слова"
 >
 	<LeadCard
-		category	= {firstProduct.category}
-		description	= {firstProduct.description}
-		id			= {firstProduct.id}
-		image		= {firstProduct.image}
-		price		= {firstProduct.price}
-		title		= {firstProduct.title}
+		category={firstProduct.category}
+		description={firstProduct.description}
+		id={firstProduct.id}
+		image={firstProduct.image}
+		price={firstProduct.price}
+		title={firstProduct.title}
 	/>
-	<h1>Astro</h1>
+	<div class="flex flex-wrap justify-between pt-12 -mx-6">
+		{
+			products.map((products, index) => (
+				<Card
+					category={products.category}
+					description={products.description}
+					id={products.id}
+					image={products.image}
+					price={products.price}
+					title={products.title}
+					widthClass={widthClassesOfCards[index]}
+				/>
+			))
+		}
+	</div>
 </Layout>
