--- a/src/components/LeadCard.astro
+++ b/src/components/LeadCard.astro
@@ -1,39 +1,39 @@
 ---
 import { IProduct } from "../types";
 
+// Определяем тип данных, которые мы ожидаем
+interface Props {
+	product: IProduct;
+}
+
 // Получение данных
 const {
-	category,
-    description,
-    id,
-	image,
-	price,
-	title,
-} = Astro.props as IProduct;
+	product,
+} = Astro.props as Props;
 ---
 
 <div class="flex h-full bg-white rounded overflow-hidden shadow-lg">
 	<a href="post.html" class="flex flex-wrap no-underline hover:no-underline">
 		<div class="w-full md:w-2/3 rounded-t">
-			<img src={image}
+			<img src={product.image}
 				class="h-full w-full h-[600px] w-[800px] shadow">
 		</div>
 
 		<div class="w-full md:w-1/3 flex flex-col flex-grow flex-shrink">
 			<div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-				<p class="w-full text-gray-600 text-xs md:text-sm pt-6 px-6 uppercase">{category}</p>
-				<div class="w-full font-bold text-xl text-gray-900 px-6">{title}</div>
+				<p class="w-full text-gray-600 text-xs md:text-sm pt-6 px-6 uppercase">{product.category}</p>
+				<div class="w-full font-bold text-xl text-gray-900 px-6">{product.title}</div>
 				<p class="text-gray-800 font-serif text-base px-6 mb-5">
-					{description}
+					{product.description}
 				</p>
 			</div>
 
 			<div
 				class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow-lg p-6">
 				<div class="flex items-center justify-between">
-					<img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content={title}
-						src={image} alt={title}>
-					<p class="text-gray-600 text-xs md:text-sm">Price: {price}ŧ</p>
+					<img class="w-8 h-8 rounded-full mr-4 avatar" data-tippy-content={product.title}
+						src={product.image} alt={product.title}>
+					<p class="text-gray-600 text-xs md:text-sm">Price: {product.price}ŧ</p>
 				</div>
 			</div>
 		</div>
