Странички с сообщениями (товарами)

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,7 +16,7 @@ const {
 
 <div class={"w-full md:"+widthClass.valueOf()+" p-6 flex flex-col flex-grow flex-shrink"}>
 	<div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow-lg">
-		<a href="#" class="flex flex-wrap no-underline hover:no-underline">
+		<a href={"./post/"+product.id} class="flex flex-wrap no-underline hover:no-underline">
 			<img src={product.image}
 				class="h-64 w-full rounded-t pb-6">
 			<p class="w-full text-gray-600 text-xs md:text-sm px-6 uppercase">{product.category}</p>
