--- a/src/components/LeadCard.astro
+++ b/src/components/LeadCard.astro
@@ -13,7 +13,7 @@ const {
 ---
 
 <div class="flex h-full bg-white rounded overflow-hidden shadow-lg">
-	<a href="post.html" class="flex flex-wrap no-underline hover:no-underline">
+	<a href={"./post/"+product.id} class="flex flex-wrap no-underline hover:no-underline">
 		<div class="w-full md:w-2/3 rounded-t">
 			<img src={product.image}
 				class="h-full w-full h-[600px] w-[800px] shadow">
