--- a/src/layouts/NavContainerLayout.astro
+++ b/src/layouts/NavContainerLayout.astro
@@ -1,7 +1,7 @@
 ---
 // Список ссылок для менюшки
 const navLins = [
-    { text: "POST", url: "post.html", active: true },
+    { text: "POST", url: "./post/1", active: true },
     { text: "LINK1", url: "#" },
     { text: "LINK2", url: "#" },
     { text: "LINK3", url: "#" },
@@ -31,7 +31,6 @@ const navLins = [
                         </li>
                     ))
                 }
-
             </ul>
         </div>
 
