--- a/src/layouts/ContainerLayoutPost.astro
+++ b/src/layouts/ContainerLayoutPost.astro
@@ -8,9 +8,7 @@ import SubscribeContainerLayout from "./SubscribeContainerLayout.astro";
 		<div
 			class="bg-white w-full p-8 md:p-24 text-xl md:text-2xl text-gray-800 leading-normal"
 			style="font-family:Georgia,serif;"
-		>
-			<slot />
-		</div>
+		></div>
 
 		<SubscribeContainerLayout />
 		<AuthorContainerLayout />
