--- a/src/layouts/ContainerLayoutPost.astro
+++ b/src/layouts/ContainerLayoutPost.astro
@@ -1,9 +1,6 @@
 ---
-import AuthorContainerLayout from "./AuthorContainerLayout.astro";
 ---
 
 <div class="container max-w-5xl mx-auto -mt-32">
-	<div class="mx-0 sm:mx-6">
-		<AuthorContainerLayout />
-	</div>
+	<div class="mx-0 sm:mx-6"></div>
 </div>
