--- a/src/layouts/CardboardLayoutPost.astro
+++ b/src/layouts/CardboardLayoutPost.astro
@@ -10,14 +10,6 @@ const products = (await response.json()) as IProduct[];
 
 <div class="bg-gray-200">
 	<div class="container w-full max-w-6xl mx-auto px-2 py-8">
-		<div class="flex flex-wrap -mx-2">
-			{
-				products.map((products) => (
-					<CardPost
-						product={products}
-					/>
-				))
-			}
-		</div>
+		<div class="flex flex-wrap -mx-2"></div>
 	</div>
 </div>
