--- a/src/layouts/ContainerLayout.astro
+++ b/src/layouts/ContainerLayout.astro
@@ -1,6 +1,6 @@
 ---
-import SubscribeContainerLayout from "./SubscribeContainerLayout.astro";
-import AuthorContainerLayout from "./AuthorContainerLayout.astro";
+import SubscribeContainerLayout from "./SubscribeContainerLayout.astro"
+import AuthorContainerLayout from "./AuthorContainerLayout.astro"
 ---
 
 <div class="container px-4 md:px-0 max-w-6xl mx-auto -mt-32">
