--- a/src/layouts/ContainerLayout.astro
+++ b/src/layouts/ContainerLayout.astro
@@ -7,6 +7,6 @@ import AuthorContainerLayout from "./AuthorContainerLayout.astro"
         <div class="bg-gray-200 w-full text-xl md:text-2xl text-gray-800 leading-normal rounded-t">
             <slot />
         </div>
-        <AuthorContainerLayout />
+        <AuthorContainerLayout></AuthorContainerLayout>
     </div>
 </div>
