--- a/src/layouts/ContainerLayoutPost.astro
+++ b/src/layouts/ContainerLayoutPost.astro
@@ -1,6 +1,18 @@
 ---
+import AuthorContainerLayout from "./AuthorContainerLayout.astro";
+import SubscribeContainerLayout from "./SubscribeContainerLayout.astro";
 ---
 
 <div class="container max-w-5xl mx-auto -mt-32">
-	<div class="mx-0 sm:mx-6"></div>
+	<div class="mx-0 sm:mx-6">
+		<div
+			class="bg-white w-full p-8 md:p-24 text-xl md:text-2xl text-gray-800 leading-normal"
+			style="font-family:Georgia,serif;"
+		>
+			<slot />
+		</div>
+
+		<SubscribeContainerLayout />
+		<AuthorContainerLayout />
+	</div>
 </div>
