--- a/src/layouts/FooterLayout.astro
+++ b/src/layouts/FooterLayout.astro
@@ -1,3 +1,8 @@
+---
+import NavFooterLayout from "./NavFooterLayout.astro";
+---
+
+
 <footer class="bg-gray-900">
 	<div class="container max-w-6xl mx-auto flex items-center px-2 py-8">
 		<div class="w-full mx-auto flex flex-wrap items-center">
@@ -12,6 +17,7 @@
 					>
 				</a>
 			</div>
+			<NavFooterLayout />
 		</div>
 	</div>
 </footer>
